<resources>
    <string name="app_name">Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    TODO: searchbar placeholder -->
    <string name="search_bar">Search by book name</string>
    <!--    TODO: add book -->
    <string name="addBook">Add Book</string>

    <!--    drop down field -->
    <string-array name="category">
        <item>Food</item>
        <item>Glossary</item>
        <item>Stationery</item>
        <item>Miscellaneous</item>
    </string-array>

    <!--    add book-->
    <string name="target">Subject name</string>
    <string name="default_currency">Default currency</string>
    <string name="common_categories">Common categories</string>
    <string name="food">Food</string>
    <string name="mis">Miscellaneous</string>
    <string name="grocery">Grocery</string>
    <string name="stationery">Stationery</string>
    <string name="accommodation">Sports</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">name</string>

    <!--  book-menu  -->
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="book_deleting_warrning">Are you sure want to delete this book?</string>

    <!-- income_expenses    -->
    <string name="income">Cash In</string>
    <string name="expenses">Cash Out</string>

    <!--    income Fragment-->
    <string name="save">Save</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>