<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnAdd"
            style="@style/normalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSports"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMis"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewTargetName"
            android:layout_width="134dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:text="@string/target"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/enterNameField"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/enterNameField"
            android:layout_width="197dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:inputType="textCapSentences"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/common_categories"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defaultCurrencySpinner" />

        <CheckBox
            android:id="@+id/checkBoxFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBoxShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/grocery"
            app:layout_constraintStart_toEndOf="@+id/checkBoxFood"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBoxStationery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/stationery"
            app:layout_constraintStart_toEndOf="@+id/checkBoxShopping"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBoxSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/accommodation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFood" />

        <CheckBox
            android:id="@+id/checkBoxMis"
            android:layout_width="140dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/mis"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSports"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxShopping" />

        <TextView
            android:id="@+id/currencyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/default_currency"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterNameField" />

        <Spinner
            android:id="@+id/defaultCurrencySpinner"
            android:layout_width="147dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterNameField" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>